compiler/test/conformance/invalid/inv_operator_no_type.tu
// INVÁLIDO: operator exige "-> tipo" de retorno
operator ** (a: Int, b: Int) {
  return a * b
}

fn main() {
  print(2 ** 3)
}
